# pytest_bdd_TTM

./: README.md  pyproject.toml  pytest.ini
attachment/: test_task.docx
features/: check_rating.feature
features/step_defs/: conftest.py  test_check_rating.py  utils.py
features/step_defs/POM/: yandex_page_model.py
